# substrate-archiver

./: .gitignore  Cargo.toml  Dockerfile  README.md  Shuttle.toml  db_schema.sql
networks/: _template.json  humanode.json
src/: main.rs
src/utils/: all_networks.rs  archive_block.rs  block_type.rs  get_block.rs  mod.rs  schema.rs  server_handlers.rs  transaction.rs
