[package]
name = "substrate-archiver"
version = "0.2.0"
edition = "2021"
description = "EL data pipeline for WeaveVM-Substrate data"
authors = ["charmful0x <rani@decent.land>"]
license = "MIT"
repository = "https://github.com/weavevm/substrate-archiver"
readme = "README.md"
documentation = "https://docs.wvm.dev"
keywords = ["wvm", "indexer", "arweave", "etl", "substrate"]

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
borsh = "1.5.1"
borsh-derive = "1.5.1"
brotli = "6.0.0"
dotenv = "0.15.0"
ethers = "2.0.14"
ethers-core = "2.0.14"
ethers-providers = "2.0.14"
planetscale-driver = "0.5.1"
serde = "1.0.205"
serde_json = "1.0.122"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = { version = "1.39.2", features = ["full"] }
ureq = "2.11.0"
